# ocr-cipher-solver

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: automated-test.yml
ocr_cipher_solver/: __main__.py  ocr.py  pipeline.py  types.py
ocr_cipher_solver/ciphers/: __init__.py  base.py  caesar.py  identity.py
ocr_cipher_solver/data_formats/: __init__.py  bounding_box.py  character.py  colors.py  position.py  positional_character.py
ocr_cipher_solver/outputs/: __init__.py  base.py  save_image.py  show_image.py
ocr_cipher_solver/reconstructor/: __init__.py  reconstructor.py
ocr_cipher_solver/utils/: __init__.py  color_utils.py  conversion_utils.py  font_utils.py
scripts/: run_all_images.py
tests/: ocr_test.py
tests/encipherer_tests/: caesarian_cipher_test.py
tests/ocr_tests/: conftest.py  ocr_test.py
tests/util_tests/: color_util_test.py  conftest.py
