[metadata]
name = ocr-cipher-solver
version = 0.0.1
author = Ryan Singman
author_email = ryanjs@vt.edu
description = OCR Cipher Solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ocr-cipher-solver/ocr-cipher-solver
project_urls = 
    Issue Tracker = https://github.com/ocr-cipher-solver/ocr-cipher-solver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
