[metadata]
name = ocr_cipher_solver
version = 0.0.1
description = OCR Cipher Solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ocr-cipher-solver/ocr-cipher-solver
author = Ryan Singman
author_email = ryanjs@vt.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Issue Tracker = https://github.com/ocr-cipher-solver/ocr-cipher-solver/issues

[options]
packages = find:
install_requires =
    Pillow>=8.X.X,<8.3.0
    numpy>=1.19.5
    pytesseract>=0.3.8
python_requires = >=3.8

[flake8]
max-line-length = 100
per-file-ignores = __init__.py:F401
